<resources>
    <string name="app_name">定位助手</string>
    <string name="doLocation">正在定位。。。</string>
    <string name="simple_dialog">删除设备信息</string>
    <string name="dialog_message">请确认是否删除所有信息？</string>
    <string name="postive_button">确定</string>
    <string name="negative_button">取消</string>
    <string name="map_mark">标注</string>
    <string name="devices">设备</string>
    <string name="acq_data">定位</string>


    <!--我的界面-->
    <string name="mine_login_title">请登录系统</string>
    <string name="mine_login_hint">登陆后同步云端</string>
    <string name="mine_device_repair">待维护设备列表</string>
    <string name="mine_main_info">我的详细信息</string>
    <string name="mine_setting">系统设置</string>
    <string name="mine_about">关于</string>
    <string name="username">用户名</string>
    <string name="username_hint">用户名字母开头的5到18位字符，不含特殊字符</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_hint">密码是6到16位字符，不含特殊字符</string>
    <string name="action_sign_in_short">登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="action_sign_in">注册</string>
    <string name="error_password_invalid">密码格式设置错误</string>
    <string name="error_username_invalid">用户名格式设置错误</string>
    <string name="error_emil_invalid">邮箱格式设置错误</string>
    <string name="mine_logout">注销登录</string>
    <string name="emailaddress">邮箱</string>
    <string name="resend_email_verify_code">重新发送邮件验证码</string>
    <string name="mine_login_username">用户名</string>
    <string name="mine_login_email">用户邮箱</string>
    <string name="mine_request_change_password">修改用户密码</string>
    <string name="mine_request_change_email">修改用户邮箱</string>
    <string name="password_repeat_fail">两次输入的密码不一致</string>
    <string name="email_repeat_fail">邮箱输入不一致</string>
    <string name="prompt_password_repeat">请再输入一次密码</string>
    <string name="emailaddress_repeat">请再输入一次邮箱</string>
    <string name="mine_manage_data">设备数据管理</string>
    <string name="forgot_password">忘记密码</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_email_hint">邮箱格式错误</string>


</resources>
