<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/iv_user_image"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_user"/>

            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/iv_user_image"
                android:text="@string/mine_login_title"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/tv_login_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_login_title"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/iv_user_image"
                android:text="@string/mine_login_hint"
                android:textSize="14sp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_divider"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@color/mine_button_background"
                android:text="@string/mine_device_repair"
                android:textSize="18sp"
                android:textColor="@color/mine_text_color"
                android:textAlignment="textStart"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_divider"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@color/mine_button_background"
                android:text="@string/mine_main_info"
                android:textColor="@color/mine_text_color"
                android:textSize="18sp"
                android:textAlignment="textStart"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_divider"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@color/mine_button_background"
                android:text="@string/mine_setting"
                android:textSize="18sp"
                android:textColor="@color/mine_text_color"
                android:textAlignment="textStart"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_divider"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@color/mine_button_background"
                android:text="@string/mine_about"
                android:textSize="18sp"
                android:textColor="@color/mine_text_color"
                android:textAlignment="textStart"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_divider"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>


