<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.notinglife.android.LocationHelper.activity.UserDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mine_toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <RelativeLayout
            android:id="@+id/rl_user_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/iv_user_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_action_user"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/iv_user_image"
                android:text="@string/mine_login_username"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/tv_emailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_username"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/iv_user_image"
                android:text="@string/mine_login_email"
                android:textSize="14sp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_divider"/>

            <TextView
                android:id="@+id/mine_request_change_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:background="@color/mine_button_background"
                android:text="@string/mine_request_change_password"
                android:textColor="@color/mine_text_color"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_divider"/>

            <TextView
                android:id="@+id/mine_request_change_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:background="@color/mine_button_background"
                android:text="@string/mine_request_change_email"
                android:textColor="@color/mine_text_color"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_divider"/>

            <Button
                android:id="@+id/mine_setting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@color/mine_button_background"
                android:text="@string/mine_setting"
                android:textAlignment="textStart"
                android:textColor="@color/mine_text_color"
                android:visibility="visible"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_divider"/>

            <Button
                android:id="@+id/mine_logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@color/mine_button_background"
                android:text="@string/mine_logout"
                android:textAlignment="textStart"
                android:textColor="@color/mine_text_color"
                android:visibility="gone"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_divider"/>

            <Button
                android:id="@+id/mine_about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@color/mine_button_background"
                android:text="@string/mine_about"
                android:textAlignment="textStart"
                android:textColor="@color/mine_text_color"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_divider"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
