<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg_bottom_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bottom_group_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/rb_acq_data"
            style="@style/Bottom_Tab_Style"
            android:drawableTop="@drawable/data_acq"
            android:text="@string/acq_data"
            android:textColor="@color/colorTextGray"
            android:checked="true"
            android:weightSum="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"/>
        <RadioButton
            android:id="@+id/rb_mark_data"
            style="@style/Bottom_Tab_Style"
            android:drawableTop="@drawable/map_mark"
            android:text="@string/map_mark"
            android:textColor="@color/colorTextGray"
            android:weightSum="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"/>

        <RadioButton
            android:id="@+id/rb_list_devices"
            style="@style/Bottom_Tab_Style"
            android:drawableTop="@drawable/devices"
            android:text="@string/devices"
            android:textColor="@color/colorTextGray"
            android:weightSum="1"/>
    </RadioGroup>

</LinearLayout>
